<resources>
    <string name="app_name">Team-1_-Treacker_android</string>
    <string name="Welcome">Добро пожаловать</string>
    <string name="addEmailPass">Введите почту и пароль для входа в приложение</string>
    <string name="Email">Email</string>
    <string name="Pass">Пароль</string>
    <string name="Pass_2">Повторите пароль</string>
    <string name="forgot">Забыли пароль?</string>
    <string name="Apply">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="restoring">Восстановление доступа</string>
    <string name="restoringInfo">Введите почту, на которую отправим вам код</string>
    <string name="sendCode">Подтвердить</string>
    <string name="registration">Регистрация</string>
    <string name="nav_main">Главная</string>
    <string name="nav_analytics">Аналитика</string>
    <string name="nav_history">История</string>
    <string name="nav_other">Еще</string>
    <string name="analytics">Аналитика</string>
    <string name="period">Период</string>
    <string name="or">или</string>
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="noAccount">Нет аккаунта?</string>
    <string name="back">Назад</string>

    <!-- Настройки -->
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="reminders">Напоминания</string>
    <string name="notification_hint">Будем напоминать фиксировать расходы</string>
    <string name="export">Экспорт расходов</string>
    <string name="export_type">CSV</string>
    <string name="currency">Валюта</string>
    <string name="rub">RUB</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="currency_title">Выбор валюты</string>
    <string name="rub_opt">Российский рубль, ₽</string>
    <string name="usd_opt">Доллар США, $</string>
    <string name="eur_opt">Евро, €</string>
    <string name="notifications">Уведомление</string>
    <string name="notification_time">Время</string>
    <string name="default_time">12:00</string>
    <string name="message_hint">Сообщение</string>
    <string name="message">Не забудьте внести расходы</string>
    <string name="permission_denied">Уведомления запрещены</string>
    <string name="permission_denied_message">Вы можете предоставить разрешения в настройках приложения.</string>
    <string name="open_settings">Открыть настройки</string>
    <string name="cancel">Отмена</string>

    <!--  Добавить расход  -->
    <string name="add_expense">Добавление расхода</string>
    <string name="sum">Сумма, ₽</string>
    <string name="add">Добавить</string>
    <string name="comment_in_edit_text">Примечание (необязательно)</string>
    <string name="today">Сегодня</string>
</resources>