<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.ui.currency.CurrencyFragment"
    android:layout_marginHorizontal="@dimen/dim20">

        <!-- Назад -->
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back_arrow"
            app:tint="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Заголовок -->
        <TextView
            android:id="@+id/currencyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/currency_title"
            android:textSize="@dimen/text16"
            android:fontFamily="@font/bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/currencyGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim20"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/backButton">

        <RadioButton
            android:id="@+id/rubOpt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dim12"
            android:text="@string/rub_opt"
            android:fontFamily="@font/bold"
            android:textSize="@dimen/text14"
            android:background="@null"
            android:button="@null"
            android:drawableEnd="@drawable/bg_radio_btn" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim2"
            android:background="?attr/colorOnPrimary" />
        <RadioButton
            android:id="@+id/usdOpt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dim12"
            android:text="@string/usd_opt"
            android:fontFamily="@font/bold"
            android:textSize="@dimen/text14"
            android:background="@null"
            android:button="@null"
            android:drawableEnd="@drawable/bg_radio_btn" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim2"
            android:background="?attr/colorOnPrimary" />
        <RadioButton
            android:id="@+id/eurOpt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dim12"
            android:text="@string/eur_opt"
            android:fontFamily="@font/bold"
            android:textSize="@dimen/text14"
            android:background="@null"
            android:button="@null"
            android:drawableEnd="@drawable/bg_radio_btn" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
