<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroud">
    <TextView
        android:id="@+id/hello"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/Welcome"
        android:textSize="@dimen/text24"
        android:fontFamily="@font/bold"
        android:textColor="@color/primaryDark"
        android:layout_marginTop="@dimen/dim60"
        android:layout_marginHorizontal="@dimen/dim20"
        />
    <TextView
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hello"
        android:text="@string/addEmailPass"
        android:textSize="@dimen/text14"
        android:fontFamily="@font/regular"
        android:textColor="@color/secondary"
        android:layout_marginTop="@dimen/dim8"
        android:layout_marginHorizontal="@dimen/dim20"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info"
        android:layout_marginHorizontal="@dimen/dim20"
        android:layout_marginTop="@dimen/dim20"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:paddingHorizontal="@dimen/dim16"
        app:hintTextColor="@color/color_et"
        app:errorTextColor="@color/error"
        android:gravity="center_vertical"
        style="@style/MyEditTextStyle"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim60"
            android:hint="@string/Email"
            android:textColorHint="@color/secondary"
            android:gravity="center_vertical"
            android:textColor="@color/primaryDark"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:background="@drawable/et_shape"
            android:fontFamily="@font/medium"
            android:textSize="@dimen/text14"
            style="@style/MyEditTextStyle"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/error_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/title_email"
        app:layout_constraintTop_toBottomOf="@id/title_email"
        android:layout_marginTop="@dimen/dim4"
        android:layout_marginStart="@dimen/dim8"
        android:textColor="@color/error"
        android:textSize="@dimen/text10"
        android:fontFamily="@font/medium"
        android:visibility="gone"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_email"
        android:layout_marginHorizontal="@dimen/dim20"
        android:layout_marginTop="@dimen/dim12"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:paddingHorizontal="@dimen/dim16"
        app:endIconDrawable="@drawable/icon_pass_close"
        app:endIconMode="password_toggle"
        app:endIconScaleType="center"
        app:errorTextColor="@color/error"
        app:hintTextColor="@color/color_et"
        app:endIconTint="@color/secondary"
        android:gravity="center_vertical"
        style="@style/MyEditTextStyle"
        >
        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim60"
            android:hint="@string/Pass"
            android:textColorHint="@color/secondary"
            android:gravity="center_vertical"
            android:textColor="@color/primaryDark"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="textPassword"
            android:background="@drawable/et_shape"
            android:textSize="@dimen/text14"
            android:fontFamily="@font/medium"
            style="@style/MyEditTextStyle"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/error_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/title_pass"
        app:layout_constraintTop_toBottomOf="@id/title_pass"
        android:layout_marginTop="@dimen/dim4"
        android:layout_marginStart="@dimen/dim8"
        android:textColor="@color/error"
        android:textSize="@dimen/text10"
        android:fontFamily="@font/medium"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_pass"
        android:text="@string/forgot"
        android:textSize="@dimen/text14"
        android:fontFamily="@font/regular"
        android:textColor="@color/accent"
        android:layout_marginTop="@dimen/dim16"
        android:layout_marginStart="@dimen/dim20"
        />
    <android.widget.Button
        android:id="@+id/bt_apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPass"
        android:layout_marginHorizontal="@dimen/dim20"
        android:layout_marginTop="@dimen/dim24"
        android:background="@drawable/b_apply_shape"
        android:enabled="false"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/Apply"
        android:textSize="@dimen/text14"
        android:fontFamily="@font/medium"
        />
    <View
        android:id="@+id/line_start"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/dim4"
        android:layout_marginStart="@dimen/dim20"
        android:paddingVertical="@dimen/dim8"
        android:background="@color/secondary"
        app:layout_constraintTop_toTopOf="@id/or"
        app:layout_constraintEnd_toStartOf="@id/or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/or"
        />
    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_apply"
        app:layout_constraintEnd_toEndOf="@id/bt_apply"
        app:layout_constraintStart_toStartOf="@id/bt_apply"
        android:layout_marginTop="@dimen/dim24"
        android:gravity="center"
        android:textColor="@color/secondary"
        android:text="@string/or"
        />
    <View
        android:id="@+id/line_end"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/dim20"
        android:layout_marginStart="@dimen/dim4"
        android:paddingVertical="@dimen/dim8"
        android:background="@color/secondary"
        app:layout_constraintTop_toTopOf="@id/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/or"
        app:layout_constraintBottom_toBottomOf="@id/or"
        />
    <android.widget.Button
        android:id="@+id/b_registration_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/b_registration_apple"
        app:layout_constraintTop_toBottomOf="@id/line_start"
        android:layout_marginStart="@dimen/dim20"
        android:layout_marginTop="@dimen/dim24"
        android:background="@drawable/et_shape"
        android:textColor="@color/extended"
        android:textAllCaps="false"
        android:text="@string/google"
        android:textSize="@dimen/text14"
        android:paddingVertical="@dimen/dim12"
        android:drawableStart="@drawable/icon_google"
        android:gravity="start"
        android:paddingLeft="@dimen/dim50"
        android:drawablePadding= "@dimen/dim8"
        android:fontFamily="@font/medium"
        />
    <android.widget.Button
        android:id="@+id/b_registration_apple"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/b_registration_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_end"
        android:layout_marginTop="@dimen/dim24"
        android:layout_marginStart="@dimen/dim8"
        android:layout_marginEnd="@dimen/dim20"
        android:background="@drawable/et_shape"
        android:textColor="@color/extended"
        android:textAllCaps="false"
        android:text="@string/apple"
        android:textSize="@dimen/text14"
        android:paddingVertical="@dimen/dim12"
        android:drawableStart="@drawable/icon_apple"
        android:gravity="start"
        android:paddingLeft="52dp"
        android:drawablePadding= "@dimen/dim8"
        android:fontFamily="@font/medium"
        />
    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dim54"
        android:text="@string/noAccount"
        android:textColor="@color/accent"
        android:textSize="@dimen/text14"
        android:fontFamily="@font/regular"
        />
</androidx.constraintlayout.widget.ConstraintLayout>