<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/dim20"
    tools:context=".settings.ui.notifications.NotificationsFragment">


    <!-- Назад -->
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back_arrow"
        app:tint="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Заголовок -->
    <TextView
        android:id="@+id/notificationsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/settings"
        android:textSize="@dimen/text16"
        android:fontFamily="@font/bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Уведомление -->
    <LinearLayout
        android:id="@+id/notificationCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim60"
        android:layout_marginTop="@dimen/dim24"
        android:gravity="center"
        android:paddingHorizontal="@dimen/dim12"
        android:background="@drawable/bg_rounded_primary"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/notificationsTitle" >

        <TextView
            android:id="@+id/notification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notifications"
            android:textSize="@dimen/text14"
            android:fontFamily="@font/bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/notificationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumb="@drawable/sw_thumb"
            app:track="@drawable/sw_track"
            app:thumbTint="@color/sw_thumb_tint"
            app:trackTint="@color/sw_track_tint"
            />
    </LinearLayout>

    <!-- Время -->
    <LinearLayout
        android:id="@+id/timeCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim60"
        android:layout_marginTop="@dimen/dim8"
        android:gravity="center"
        android:paddingHorizontal="@dimen/dim12"
        android:background="@drawable/bg_rounded_primary"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/notificationCard" >

        <TextView
            android:id="@+id/timeTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notification_time"
            android:textSize="@dimen/text14"
            android:fontFamily="@font/bold" />

        <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12"
            android:textColor="@color/accent"
            android:textSize="@dimen/text14"
            android:fontFamily="@font/bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="@color/accent"
            android:textSize="@dimen/text14"
            android:fontFamily="@font/bold" />
        <TextView
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textColor="@color/accent"
            android:textSize="@dimen/text14"
            android:fontFamily="@font/bold" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/numberPickerCard"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        app:layout_constraintTop_toBottomOf="@id/timeCard"
        android:layout_marginTop="@dimen/dim2"
        android:orientation="horizontal"
        android:background="@drawable/bg_rounded_bottom_primary"
        android:gravity="center"
        android:visibility="gone" >

        <android.widget.NumberPicker
            android:id="@+id/hourPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.widget.NumberPicker
            android:id="@+id/minutePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Сообщение -->
    <com.google.android.material.textfield.TextInputLayout style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:id="@+id/notificationMessageInputLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim60"
        android:layout_marginTop="8dp"
        android:paddingTop="@dimen/dim2"
        android:background="@drawable/bg_rounded_primary"
        android:fontFamily="@font/regular"
        android:hint="@string/message_hint"
        android:maxLines="1"
        android:singleLine="true"
        app:hintTextColor="@color/text_secondary_light_dark"
        app:endIconDrawable="@drawable/ic_edit_text"
        app:endIconMode="custom"
        app:endIconTint="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberPickerCard">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/notificationMessageEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim60"

            android:paddingEnd="@dimen/dim12"
            android:paddingStart="@dimen/dim12"
            android:background="@android:color/transparent"
            android:fontFamily="@font/bold"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textSize="@dimen/text14"
            android:text="@string/message"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>